# libhal-projects

./: LICENSE  README.md
exception-vs-monad/: common.h  libunwind-arm.cpp  unwind-arm-common.h
exception-vs-monad/empty/: CMakeLists.txt  conanfile.py
exception-vs-monad/exception/: CMakeLists.txt  conanfile.py  extras.cpp  main.cpp
exception-vs-monad/exception_depth/: CMakeLists.txt  generate_functions.py  main.cpp
exception-vs-monad/exception_performance/: CMakeLists.txt  generate_functions.py  main.cpp
exception-vs-monad/exception_poly/: CMakeLists.txt  conanfile.py  main.cpp
exception-vs-monad/return_code/: CMakeLists.txt  main.cpp
exception-vs-monad/return_code_depth/: CMakeLists.txt  generate_functions.py  main.cpp
exception-vs-monad/return_code_performance/: CMakeLists.txt  conanfile.py  generate_functions.py  main.cpp
input_pin/: conanfile.txt  main.cpp
pwm16_ch/: CMakeLists.txt  conanfile.txt  libhal.tweaks.hpp  main.cpp
rmd_tester_v3/: CMakeLists.txt  conanfile.txt  main.cpp
si7060_test/: CMakeLists.txt  conanfile.txt  main.cpp
six-rmd-motor-test/: CMakeLists.txt  conanfile.txt  main.cpp
